--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,13 @@ main p{
     text-align: justify;
 }
 
+.maintext {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px 1px black;
+}
+
 main h2{
     font-family: 'Patua One', cursive;
     margin-bottom: 1%;
@@ -90,6 +97,7 @@ hr {
     margin-top: 30px;
     border: 1px dashed black;
 }
+
 
 .circles{
     margin-top: 30px;
@@ -113,7 +121,7 @@ figcaption {
     width: 300px;
     height: 275px;
     border-radius: 50%;
-    border: 1px solid whitesmoke;
+    box-shadow: 0 0 10px 1px black;
 }
 
 .formcontainer{
@@ -124,7 +132,9 @@ figcaption {
 }
 .form {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;  
+    box-shadow: 0 0 10px 1px black;
+    border-radius: 10px;  
 }
 
 .form >h3 {
