--- a/src/styles.css
+++ b/src/styles.css
@@ -4,190 +4,191 @@
 */
 
 :root {
-    --background-color: #dac29c;
-    --background-color2: #1b529a;
-    --background-color3: #b25f03; 
-    font-size: 18px;
+  --background-color: #dac29c;
+  --background-color2: #1b529a;
+  --background-color3: #d7a367f1;
+  font-size: 18px;
 }
 
 * {
-    margin: 0px;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Maven Pro', sans-serif;
+  margin: 0px;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Maven Pro', sans-serif;
 }
 
-body {   
-    background: linear-gradient( 170deg, var(--background-color), var(--background-color3));
-    color: #29241e;
+body {
+  background: linear-gradient(
+    170deg,
+    var(--background-color),
+    var(--background-color3)
+  );
+  color: #29241e;
 }
 
 .header-container {
-    height: 50vh; 
-    background-image: url("./img/hero1.PNG");
-    background-size: cover;
-    background-position-x: center;
-    background-repeat: no-repeat;
-    opacity: 0.95;
-    box-shadow: 0px 1px 10px 1px whitesmoke;
+  height: 50vh;
+  background-image: url('./img/hero1.PNG');
+  background-size: cover;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  opacity: 0.95;
+  box-shadow: 0px 1px 10px 1px whitesmoke;
 }
 
 .navigation {
-    position: fixed;
-    left: -155px;
-    bottom: 30%;
-    transition: 450ms ease-out;
-    background-color: var(--background-color2);
-    border-radius: 0 5% 5% 0;
-    cursor: pointer;
-    box-shadow: 0.5px 0px 14px 1px black;
-    }
-
-.navigation:hover{
-    transform: translateX(130px);
-    background-color: var(--background-color3);
-}    
-
-.navigation ul {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    list-style-type: none;
-    justify-content: center; 
-    width: 185px;
-    color: white;
-    border-radius: 7px;
-    overflow: hidden;     
-    height: 200px;   
-    padding-right: 30px;
-    text-align: right;
+  position: fixed;
+  left: -155px;
+  bottom: 30%;
+  transition: 450ms ease-out;
+  background-color: var(--background-color2);
+  border-radius: 0 5% 5% 0;
+  cursor: pointer;
+  box-shadow: 0.5px 0px 14px 1px black;
 }
 
-.navigation li>a {
-    font-size: 1.8rem;
-    text-decoration: none;
-    color: whitesmoke;
-    text-shadow: 1px 1px #260d0d;
+.navigation:hover {
+  transform: translateX(130px);
+  background-color: var(--background-color3);
+}
+
+.navigation ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  list-style-type: none;
+  justify-content: center;
+  width: 185px;
+  color: white;
+  border-radius: 7px;
+  overflow: hidden;
+  height: 200px;
+  padding-right: 30px;
+  text-align: right;
+}
+
+.navigation li > a {
+  font-size: 1.8rem;
+  text-decoration: none;
+  color: whitesmoke;
+  text-shadow: 1px 1px #260d0d;
 }
 
 main {
-   margin: 1% 10%;
+  margin: 2% 10%;
 }
 
-main p{
-    line-height: 1.3rem;
-    margin: 0 auto;
-    text-align: justify;
+main p {
+  line-height: 1.3rem;
+  margin: 0 auto;
+  text-align: justify;
 }
 
 .maintext {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px 1px black;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 1px black;
 }
 
-main h2{
-    font-family: 'Patua One', cursive;
-    margin-bottom: 1%;
-    font-size: 10vw;
+main h2 {
+  font-family: 'Patua One', cursive;
+  margin-bottom: 1%;
+  font-size: 10vw;
 }
 
 hr {
-    margin-top: 30px;
-    border: 1px dashed black;
+  margin-top: 30px;
+  border: 1px dashed black;
 }
 
-
-.circles{
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
+.circles {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 figure {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 figcaption {
-    margin-top: 20px;
-    width: 75%;
-    text-align: justify;
+  margin-top: 20px;
+  width: 75%;
+  text-align: justify;
 }
 
 .circles img {
-    width: 300px;
-    height: 275px;
-    border-radius: 50%;
-    box-shadow: 0 0 10px 1px black;
+  width: 300px;
+  height: 275px;
+  border-radius: 50%;
+  box-shadow: 0 0 10px 1px black;
 }
 
-.formcontainer{
-    margin-top: 30px;
-    display: flex;  
-    justify-content: center;
-    
+.formcontainer {
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
 }
 .form {
-    display: flex;
-    flex-direction: column;  
-    box-shadow: 0 0 10px 1px black;
-    border-radius: 10px;  
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 10px 1px black;
+  border-radius: 10px;
 }
 
-.form >h3 {
-    padding: 10px 10px;
-    margin-bottom: 5%;
-    font-size: 3rem;
-    font-weight: bold;
-    align-self: center;
-    text-shadow: 1px 1px gray;
+.form > h3 {
+  padding: 10px 10px;
+  margin-bottom: 3%;
+  font-size: 3rem;
+  font-weight: bold;
+  align-self: center;
+  text-shadow: 1px 1px gray;
 }
 
 #submit {
-    background-color: #c3d1e1;
-    color: #ed4f0c;
-    font-weight:bolder;
-    font-size: 22px;
+  background-color: #c3d1e1;
+  color: #ed4f0c;
+  font-weight: bolder;
+  font-size: 22px;
 }
 
-input, textarea {
-    background-color: var(--background-color);
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 20px;
-    text-align: center;
-    border-radius: 5px;
-    padding: 10px;
-    border: 1px dotted whitesmoke;
-
+input,
+textarea {
+  background-color: var(--background-color);
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  border-radius: 5px;
+  padding: 10px;
+  border: 1px dotted whitesmoke;
 }
 
 footer {
-    padding: 1%;
-    margin-top: 4%;
-    background-color: #041730;
-    text-align: center;
-    color: whitesmoke;
+  padding: 1%;
+  margin-top: 4%;
+  background-color: #041730;
+  text-align: center;
+  color: whitesmoke;
 }
 
-footer  a {
-    color: rgb(222, 112, 112);
+footer a {
+  color: rgb(222, 112, 112);
 }
-
 
 @media only screen and (max-width: 1150px) {
-    .circles{
-        flex-direction: column;
-        margin-top: 5px;
-       
-    }
+  .circles {
+    flex-direction: column;
+    margin-top: 5px;
+  }
 
-    .circles img {
-        margin-top: 10px;
-    }
-    
+  .circles img {
+    margin-top: 40px;
+  }
+
+  .formcontainer {
+    margin-top: 20px;
+  }
 }
-
-
