--- a/src/styles.css
+++ b/src/styles.css
@@ -129,6 +129,7 @@ figcaption {
 .formcontainer {
   margin: 30px auto;
   max-width: 400px;
+  background-color: var(--background-color);
 }
 
 .form {
@@ -149,7 +150,7 @@ figcaption {
 }
 
 #submit {
-  background-color: #c3d1e1;
+  background-color: #ceddee;
   color: #ed4f0c;
   font-weight: bolder;
   font-size: 22px;
@@ -165,6 +166,7 @@ textarea {
   text-align: center;
   border-radius: 5px;
   padding: 15px;
+  margin: 1px;
   border: 1px dotted whitesmoke;
 }
 
