--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ body {
   background-position-x: center;
   background-repeat: no-repeat;
   opacity: 0.95;
-  box-shadow: 0px 1px 10px 1px whitesmoke;
+  box-shadow: 0px 1px 3px 1px whitesmoke;
   display: flex;
   justify-content: flex-end;
 }
@@ -83,6 +83,15 @@ main {
   font-size: 8vh;
   text-align: center;
   margin-bottom: 20px;
+}
+
+.date {
+}
+
+.date p {
+  text-align: end;
+  font-size: 0.9 rem;
+  color: grey;
 }
 
 .title h1 {
